--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 fastapi==0.104.1
 uvicorn==0.24.0
+nodriver==0.28.4
 pydantic==2.5.0
-pandas==2.1.3
-selenium==4.15.2
-python-multipart==0.0.6
+aiofiles==23.2.1
